--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "school",
+  "name": "home",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://amlesh-dev.github.io/school",
+  "homepage": "https://amlesh-dev.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
