--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "home",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://amlesh-dev.github.io/",
+  "homepage": "https://amlesh-dev.github.io/school",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
